# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: checking-code.yml
gendiff/: cli.py  gendiff.py  generate_tree.py  parser.py
gendiff/formatters/: plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_json.py  test_parser.py  test_plain.py  test_stylish.py
tests/fixtures/: diff_json_format.txt  json_diff.txt  raw_tree.txt
