[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Difference Calculator"
authors = ["Артур Исламов <arturislamov91@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]
repository = "https://github.com/AVomalsi/python-project-50"
classifiers = [
  "Environment :: Console",
  "Framework :: Flake8",
  "Framework :: Pytest",
  "License :: Freeware",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
